# FirePlay

./: .gitignore  CHANGELOG.md  README.md  build-openssl-android.sh  build.ps1  env.sh  scan-fireplay.sh  sdk-setup.ps1  settings.gradle.kts  test-play.sh  test-stream.sh
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_renderer_aaudio.cpp  audio_renderer_aaudio.h  dnssd_stub.c  fireplay_jni.cpp  video_renderer_mediacodec.cpp  video_renderer_mediacodec.h
app/src/main/java/org/fireplay/: BootReceiver.kt  FirePlayService.kt  MainActivity.kt  StartWorker.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
docs/: milestones.md  releasing.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  4.txt  5.txt
lib-uxplay/: dnssd.h  raop_rtp_mirror.c
metadata/: org.fireplay.yml
